1.24.6
------
(RB=383405)
Fix memory leak in documentation generation.

(RB=378851)
Add unit tests for RestLiArgumentBuilders.

(RB=386973)
Task and Promise based async templates.

(RB=383125)
Enable Gradle parallel build and config-on-demand.
Fix the dependency order in the generated IntelliJ IDEA module of data-avro-1_6.

1.24.5
------
(RB=387900)
Add null pointer check for load balancer.

1.24.4
------
(RB=377223)
Turn on Rest.li 2.0 request builders by default in Gradle plugin.

(RB=377647)
Add protocol 2 URIs for BatchGetRequestBuilderTest.

(RB=380112)
Add unit tests for all classes that implement RestLiResponseBuilder.

(RB=333673)
Disallow server impl module itself to be its API project.

(RB=371175)
Allow projections on custom metadata and paging.

(RB=367345)
Repair logging for restli tests

(RB=383570)
Return parameterized ComplexResourceKey from MockBatchKVResponseFactory.createWithComplexKey().

1.24.3
------
(RB=362685)
Revisit resource method null handling.

Deprecating some parameter annotations, replacing with new ones, adding new resource context parameter annotaions and adding unit tests for the same.

(RB=376032)
Upgrade jackson-core and jackson-databind dependencies to 2.4.3.

1.24.2
------
(RB=372362)
fix the bug in handlePut of UriProperties.

1.24.1
------
(RB=370601)
Make Request#getId() return null for Rest.li 2.0.

1.24.0
------
(RB=364843)
Fail fast if resource names clash.

(RB=369715)
Make latest version Rest.li 2.0.

1.23.8
------
(RB=368138)
Expose more properties through DegraderLoadBalancerStrategyV3Jmx

(RB=368038)
Server responds with the same protocol version header name as the client requests.

1.23.7
------
(RB=363781)
Force use next version override.

1.23.6
------
(RB=364827)
reduce the number of hashes in mapKeyV3
update HashBasedPartitionAccessor
move hashLong into HashFunction interface

1.23.5
------
(RB=363214)
Support deprecated protocol version header (X-Restli-Protocol-Version).

(RB=364338)